# airwindohhs_godot

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY.md
ci/: build_android.ps1  build_ios.sh  build_macos.sh  build_windows.ps1  common.ps1  common.sh  package_addon.ps1  package_addon.py  sign_macos.sh  test_macos.sh  test_windows.ps1
config/: exclusions.json  godot_cpp_profile.json  parameter_overrides.json
demo/: project.godot
demo/.godot/: extension_list.cfg
demo/.godot/editor/: editor_layout.cfg  editor_script_doc_cache.res  filesystem_cache10
demo/addons/airwindohhs_godot/: airwindohhs_godot.gdextension  airwindohhs_godot.gdextension.in  airwindohhs_godot.gdextension.uid
demo/tests/: smoke_test.gd  smoke_test.gd.uid
docs/: ARCHITECTURE.md  TEAMCITY.md  UPDATING.md
include/airwindohhs_godot/: audio_effect.hpp  parameter_state.hpp
release/0.1.0/: MANIFEST.json  SHA256SUMS
reports/: compatibility-0.1.0.md
src/: audio_effect.cpp  register_types.cpp  register_types.hpp
tests/: catalog_validation.hpp  catalog_validation_main.cpp  test_demo_activation.py  test_generate_catalog.py  test_ios_export.py  test_package_addon.py  test_parameter_state.cpp
tools/: create_release_manifest.py  generate_catalog.py
